# sloppy_podcast_tool

./: Cargo.toml  samplerss.xml
examples/: multiple_request.rs
src/: date.rs  lib.rs  model.rs  parser.rs  util.rs
