[package]
name = "sloppy_podcast_tool"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
quick-xml = { version = "^0.21" , features = ["serialize"] }
log = "^0.4"
chrono = "^0.4"

[dev-dependencies]
flexi_logger = "^0.19"
